added other sections to readme